refactor: completed center list fast search form section. - Capacity input - Price Input - Location Input.

--- a/template/centers.html
+++ b/template/centers.html
@@ -26,7 +26,7 @@
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i
                                 class="material-icons">search</i></a></li>
-                        <li><a href="centers.html">centers</a></li>
+                        <li><a href="centers.html">List of centers</a></li>
                         <li><a href="signin.html">Sign In</a></li>
                         <li><a href="signup.html">Sign Up</a></li>
                     </ul>
@@ -40,9 +40,9 @@
             <h4 class="center-align">Boots Centers</h4>
             <div class="row">
                 <div class="col s12 l8">
-                    <a href="center-details.html">
-                        <div class="row">
-                            <div class="col s12 l6">
+                    <div class="row">
+                        <div class="col s12 l6">
+                            <a href="center-details.html">
                                 <div class="card">
                                     <div class="card-image">
                                         <img src="image/1.jpg">
@@ -54,80 +54,121 @@
                                         <!--<small>capacity</small>-->
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col s12 l6">
-                                <div class="card">
-                                    <div class="card-image">
-                                        <img src="image/1.jpg">
-                                    </div>
-                                    <div class="card-content" style="color: #333">
-                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
-                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
-                                        <!--<h5>200</h5>-->
-                                        <!--<small>capacity</small>-->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 l6">
-                                <div class="card">
-                                    <div class="card-image">
-                                        <img src="image/1.jpg">
-                                    </div>
-                                    <div class="card-content" style="color: #333">
-                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
-                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
-                                        <!--<h5>200</h5>-->
-                                        <!--<small>capacity</small>-->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 l6">
-                                <div class="card">
-                                    <div class="card-image">
-                                        <img src="image/1.jpg">
-                                    </div>
-                                    <div class="card-content" style="color: #333">
-                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
-                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
-                                        <!--<h5>200</h5>-->
-                                        <!--<small>capacity</small>-->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 l6">
-                                <div class="card">
-                                    <div class="card-image">
-                                        <img src="image/1.jpg">
-                                    </div>
-                                    <div class="card-content" style="color: #333">
-                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
-                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
-                                        <!--<h5>200</h5>-->
-                                        <!--<small>capacity</small>-->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 l6">
-                                <div class="card">
-                                    <div class="card-image">
-                                        <img src="image/1.jpg">
-                                    </div>
-                                    <div class="card-content" style="color: #333">
-                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
-                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
-                                        <!--<h5>200</h5>-->
-                                        <!--<small>capacity</small>-->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 l6">
-                                <a href="#" class="center-align btn blue lighten-2 waves-effect"> Load More </a>
-                            </div>
+                            </a>
                         </div>
-                    </a>
+                        <div class="col s12 l6">
+                            <a href="center-details.html">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col s12 l6">
+                            <a href="center-details.html">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col s12 l6">
+                            <a href="center-details.html">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col s12 l6">
+                            <a href="center-details.html">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col s12 l6">
+                            <a href="center-details.html">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col s12 l6">
+                            <a href="center-details.html">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col s12 l4">
-
+                    <h5 class="center-align">Search Faster</h5>
+                    <form action="">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="fast_price" type="number" class="validate">
+                                <label for="fast_price">Price</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="fast_capacity" type="number" class="validate">
+                                <label for="fast_capacity">Capacity</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="fast_location" type="text" class="validate">
+                                <label for="fast_location">Location</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="fast_submit" class="btn" type="submit" value="search faster">
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -327,7 +368,7 @@
                         <div class="nav-wrapper">
                             <form method="post">
                                 <div class="input-field" style="margin-top: 0 !important;">
-                                    <input id="search" type="search" placeholder="Search" required>
+                                    <input id="search" type="search" placeholder="Search by Name and Location" required>
                                     <label class="label-icon" for="search"><i class="material-icons"
                                                                               style="margin-top: -12px !important;color: #CCC;">search</i></label>
                                     <i class="material-icons" style="color: #FFF;">close</i>
@@ -339,8 +380,114 @@
             </div>
         </div>
     </div>
-    <div class="search__results bg__white z-depth-1">
-        hello w
+    <div class="search__results">
+        <h5>Center Results</h5>
+        <div class="row">
+            <div class="col s12 l6">
+                <a href="center-details.html">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="image/1.jpg">
+                        </div>
+                        <div class="card-content" style="color: #333">
+                            <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                            <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                            <!--<h5>200</h5>-->
+                            <!--<small>capacity</small>-->
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col s12 l6">
+                <a href="center-details.html">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="image/1.jpg">
+                        </div>
+                        <div class="card-content" style="color: #333">
+                            <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                            <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                            <!--<h5>200</h5>-->
+                            <!--<small>capacity</small>-->
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="divider"></div>
+        <h5>Events Results</h5>
+        <div class="row">
+            <div class="col s12 l6">
+                <div class="card wow fadeInUp">
+                    <div class="card-image">
+                        <img src="image/2.jpg">
+                        <span class="card-title">A title for this event</span>
+                        <a class="btn-floating activator halfway-fab waves-effect waves-light red tooltipped"
+                           data-position="bottom" data-tooltip="share">
+                            <i class="material-icons">share</i>
+                        </a>
+                    </div>
+                    <div class="card-content">
+                        <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                        <div>
+                            <i class="material-icons f15">location_on</i> Muson center, Lagos
+                            <i class="material-icons dropdown-button right pointer" data-activates="search_dropdown1">more_vert</i>
+                            <!-- Dropdown Structure -->
+                            <ul id="search_dropdown1" class="dropdown-content">
+                                <li>
+                                    <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Delete</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                        <small>Here is some more information about this product that is only revealed once clicked
+                            on.
+                        </small>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 l6">
+                <div class="card wow fadeInUp">
+                    <div class="card-image">
+                        <img src="image/2.jpg">
+                        <span class="card-title">A title for this event</span>
+                        <a class="btn-floating activator halfway-fab waves-effect waves-light red tooltipped"
+                           data-position="bottom" data-tooltip="share">
+                            <i class="material-icons">share</i>
+                        </a>
+                    </div>
+                    <div class="card-content">
+                        <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                        <div>
+                            <i class="material-icons f15">location_on</i> Muson center, Lagos
+                            <i class="material-icons dropdown-button right pointer" data-activates="search_dropdown2">more_vert</i>
+                            <!-- Dropdown Structure -->
+                            <ul id="search_dropdown2" class="dropdown-content">
+                                <li>
+                                    <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Delete</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                        <small>Here is some more information about this product that is only revealed once clicked
+                            on.
+                        </small>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -369,6 +516,7 @@
             } // Callback for Modal close
         });
         $('.parallax').parallax();
+        $('.dropdown-button').dropdown();
         $('.tooltipped').tooltip({delay: 50});
         $('.fixed-action-btn').openFAB();
         $('.fixed-action-btn').closeFAB();
