feat: add node dependencies for API end-points.

--- a/template/center-details.html
+++ b/template/center-details.html
@@ -101,8 +101,8 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <p><h6>Events hosted by this center</h6></p>
-                    <div class="divider"></div>
+                    <p><h6 class="bold">Events hosted by this center</h6></p>
+                    <!--<div class="divider"></div>-->
                     <section>
                         <div class="row">
                             <div class="col s12 l12">
