--- a/template/index.html
+++ b/template/index.html
@@ -23,7 +23,7 @@
                         <p>Boots EM</p>
                     </a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i
+                        <li><a href="#search__modal" class="modal-trigger" id="search__view"><i
                                 class="material-icons">search</i></a></li>
                         <li><a href="centers.html">List of centers</a></li>
                         <li><a href="signin.html">Sign In</a></li>
@@ -43,7 +43,7 @@
                             <p>Boots EM</p>
                         </a>
                         <ul id="nav-mobile" class="right hide-on-med-and-down">
-                            <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i
+                            <li><a href="#search__modal" class="modal-trigger" id="search__view"><i
                                     class="material-icons">search</i></a></li>
                             <li><a href="centers.html">List of centers</a></li>
                             <li><a href="signin.html">Sign In</a></li>
